--- a/index.html
+++ b/index.html
@@ -151,10 +151,54 @@
               </div>
             </div>
           </div>
-
-
     </header>
-    <main></main>
+    <main class="md:container md:mx-auto">
+        <!-- Featured Bike -->
+        <section>
+
+        </section>
+
+        <!-- latest bike -->
+
+        <section class="my-24">
+            <h3 class="text-5xl mb-12 font-semibold text-center">latest Bikes</h3>
+            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-5">
+                <!-- first card -->
+                <div class="card bg-base-100 shadow-xl">
+                    <figure><img src="/images/others/latest1.png" alt="Shoes" /></figure>
+                    <div class="card-body">
+                      <h2 class="card-title text-3xl">Ducati XDIAVEL S-73</h2>
+                      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+                      <div class="card-actions">
+                        <button class="btn bg-biker-primary text-white">Purchase</button>
+                      </div>
+                    </div>
+                  </div>
+                <!-- Second card -->
+                <div class="card bg-base-100 shadow-xl">
+                    <figure><img src="/images/others/latest1.png" alt="Shoes" /></figure>
+                    <div class="card-body">
+                      <h2 class="card-title text-3xl">Ducati XDIAVEL S-73</h2>
+                      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+                      <div class="card-actions">
+                        <button class="btn bg-biker-primary text-white">Purchase</button>
+                      </div>
+                    </div>
+                  </div>
+                <!-- Third card -->
+                <div class="card bg-base-100 shadow-xl">
+                    <figure><img src="/images/others/latest1.png" alt="Shoes" /></figure>
+                    <div class="card-body">
+                      <h2 class="card-title text-3xl">Ducati XDIAVEL S-73</h2>
+                      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+                      <div class="card-actions">
+                        <button class="btn bg-biker-primary text-white">Purchase</button>
+                      </div>
+                    </div>
+                  </div>
+            </div>
+        </section>
+    </main>
     <footer></footer>
 
 </body>
