image change in slider

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                         <button class="btn bg-biker-primary text-white">Purchase</button>
                     </div>
                     <div class="flex-1">
-                        <img src="/images/slider/bike1.png" class="w-[400px]" />
+                        <img src="./images/slider/bike1.png" class="w-[400px]" />
                     </div>
                 </div>
               <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
@@ -106,7 +106,7 @@
                         <button class="btn bg-biker-primary text-white">Purchase</button>
                     </div>
                     <div class="flex-1">
-                        <img src="/images/slider/bike2.png" class="w-[400px]" />
+                        <img src="./images/slider/bike2.png" class="w-[400px]" />
                     </div>
                 </div>
               <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
@@ -124,7 +124,7 @@
                         <button class="btn bg-biker-primary text-white">Purchase</button>
                     </div>
                     <div class="flex-1">
-                        <img src="/images/slider/bike3.png" class="w-[400px]" />
+                        <img src="./images/slider/bike3.png" class="w-[400px]" />
                     </div>
                 </div>
               <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
@@ -142,7 +142,7 @@
                         <button class="btn bg-biker-primary text-white">Purchase</button>
                     </div>
                     <div class="flex-1">
-                        <img src="/images/slider/bike4.png" class="w-[400px]" />
+                        <img src="./images/slider/bike4.png" class="w-[400px]" />
                     </div>
                 </div>
               <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
@@ -165,7 +165,7 @@
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-5">
                 <!-- first card -->
                 <div class="card bg-base-100 shadow-xl">
-                    <figure><img src="/images/others/latest1.png" alt="Shoes" /></figure>
+                    <figure><img src="./images/others/latest1.png" alt="Shoes" /></figure>
                     <div class="card-body">
                       <h2 class="card-title text-3xl">Ducati XDIAVEL S-73</h2>
                       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
@@ -176,7 +176,7 @@
                   </div>
                 <!-- Second card -->
                 <div class="card bg-base-100 shadow-xl">
-                    <figure><img src="/images/others/latest1.png" alt="Shoes" /></figure>
+                    <figure><img src="./images/others/latest2.png" alt="Shoes" /></figure>
                     <div class="card-body">
                       <h2 class="card-title text-3xl">Ducati XDIAVEL S-73</h2>
                       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
@@ -187,7 +187,7 @@
                   </div>
                 <!-- Third card -->
                 <div class="card bg-base-100 shadow-xl">
-                    <figure><img src="/images/others/latest1.png" alt="Shoes" /></figure>
+                    <figure><img src="./images/others/latest3.png" alt="Shoes" /></figure>
                     <div class="card-body">
                       <h2 class="card-title text-3xl">Ducati XDIAVEL S-73</h2>
                       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
