popular / upcoming section added

--- a/index.html
+++ b/index.html
@@ -152,8 +152,13 @@
   </header>
   <main class="md:container md:mx-auto">
     <!-- Featured Bike -->
-    <section>
-
+    <section class="my-24">
+      <h3 class="text-5xl mb-12 font-semibold text-center">Fetured Bikes In This Year</h3>
+      <div class="grid lg:grid-cols-3 md:grid-cols-2 grid-cols-1">
+        <div><img src="./images/others/extrabike.png" alt=""></div>
+        <div><img src="./images/others/extrabike.png" alt=""></div>
+        <div><img src="./images/others/extrabike.png" alt=""></div>
+      </div>
     </section>
 
     <!-- latest bike -->
